@@ -1,0 +1,2 @@
+ .include "dso-1.s"
+ .hidden dsofn
