@@ -1,0 +1,2 @@
+ .text
+ move.d [$r0+dsofn:GOTPLT],$r1
