@@ -1,3 +1,8 @@
+2004-09-07  Hans-Peter Nilsson  <hp@axis.com>
+
+	* ld-cris/hiddef1.d, ld-cris/hiddef1.d, ld-cris/hidrefgotplt1.s:
+	New test.
+
 2004-09-03  Tomer Levi  <Tomer.Levi@nsc.com>
 
 	* ld-crx: New directory.
